# drawing-records

./: .coveragerc  .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  pytest.ini
app/: application.py  config.py  db.py  initialization.py
app/adapters/repository/: __init__.py
app/adapters/repository/fake/: __init__.py  drawing.py  exceptions.py  registration.py
app/adapters/repository/protocols/: entities.py
app/api/: __init__.py  drawing.py  exceptions.py  health_check.py  registration.py
app/domain/entities/: __init__.py  drawing.py  protocols.py  registration.py  status.py
app/domain/services/: drawing.py  registration.py
app/infrastructure/: protocols.py  uow.py
app/infrastructure/adapters/: orm.py
app/infrastructure/adapters/exceptions/: exceptions.py
app/infrastructure/adapters/repositories/: __init__.py  drawing.py
app/infrastructure/adapters/repositories/fake/: __init__.py  drawing.py  registration.py
app/infrastructure/adapters/repositories/protocols/: __init__.py  entities.py
app/infrastructure/db/: db.py
app/service_layer/: exceptions.py
app/service_layer/dtos/: __init__.py  drawing.py  registration.py  status.py
app/service_layer/services/: drawing.py
tests/: conftest.py  utils.py
tests/e2e/: conftest.py
tests/e2e/endpoints/: test_drawing.py  test_healthcheck.py  test_registration.py
tests/factories/dtos/: drawing.py  registration.py
tests/factories/entities/: drawing.py  registration.py
tests/fake/: db.py  exceptions.py
tests/fake/repositories/: __init__.py  drawing.py  registration.py
tests/integration/: test_environment.py
tests/unit/adapters/repository/abstract/: conftest.py  test_abstract.py
tests/unit/adapters/repository/fake/: conftest.py  test_fake.py  test_fake_drawing.py  test_fake_registration.py  test_fake_session.py
tests/unit/domain/entities/: conftest.py
tests/unit/domain/entities/drawing/: conftest.py  test_drawing.py  test_drawing_create.py  test_drawing_update.py
tests/unit/domain/entities/registration/: conftest.py  test_registration.py  test_registration_create.py
tests/unit/domain/services/: conftest.py
tests/unit/domain/services/drawing/: conftest.py  test_create.py  test_delete.py  test_read.py  test_update.py
tests/unit/domain/services/registration/: conftest.py  test_create.py  test_delete.py  test_read.py
tests/unit/infrastructure/: conftest.py
tests/unit/infrastructure/adapters/repositories/: conftest.py  test_drawing.py
tests/unit/infrastructure/adapters/repositories/fake/: test_fake_registration.py  test_fake_session.py
tests/unit/service_layer/: conftest.py
tests/unit/service_layer/dtos/: conftest.py  test_drawing.py  test_registration.py
tests/unit/service_layer/services/: conftest.py  test_drawing.py
