[tool.poetry]
name = "drawing-records"
version = "0.1.0"
description = ""
authors = ["baalique <baalique@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
factory-boy = "^3.2.1"
pytest = "^7.0.1"
coverage = "^6.3.1"
pytest-factoryboy = "^2.1.0"
pytest-mock = "^3.7.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
